fix text block display on mobile

--- a/public/sass/_scripts.scss
+++ b/public/sass/_scripts.scss
@@ -26,7 +26,7 @@
 .script-title {
   font: 4rem Dense;
   white-space: nowrap;
-	margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .script-text {
@@ -42,8 +42,13 @@
   }
 
   .script-info-wrap {
+    min-width: 0;
     width: 100%;
     margin: 0 0 3rem 0;
+  }
+
+  .script-title {
+    font-size: 3rem;
   }
 
   .script-text {
@@ -51,7 +56,7 @@
   }
 
   .script-wrap:nth-child(odd) .script-info-wrap {
-    border-left: 5px solid #f66;
+    border-left: 0.5rem solid #f66;
     border-right: 0;
   }
 }
